--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -346,6 +346,7 @@ h4,
 h5,
 h6 {
   margin-bottom: 0;
+  font-weight: normal;
 }
 
 h1 {
@@ -358,7 +359,7 @@ h1 {
 h2 {
   font-size: 2rem;
   line-height: 2.75rem;
-  letter-spacing: 0.075rem;
+  letter-spacing: 0.1rem;
   margin-top: 2.5rem;
   margin-bottom: 0.8rem;
 }
@@ -377,19 +378,21 @@ h4 {
   margin-top: 1.75rem;
 }
 
-h5 {
-  font-size: 1rem;
-  line-height: $line-height;
-  letter-spacing: 0.05rem;
-  margin-top: 1.6rem;
-}
-
+h5,
 h6 {
   font-size: 1rem;
   line-height: $line-height;
   letter-spacing: 0.05rem;
-  text-transform: uppercase;
   margin-top: 1.6rem;
+  font-weight: bold;
+}
+
+h5 {
+  font-weight: bold;
+}
+
+h6 {
+  text-transform: uppercase;
 }
 
 hr {
