--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -388,7 +388,7 @@ body.dark {
 }
 
 body.dark img {
-  filter: brightness(0.8);
+  filter: brightness(0.9);
 }
 
 #page,
@@ -747,6 +747,12 @@ details {
 
 .dark details {
   border-bottom-color: #616161;
+}
+
+.dark details summary,
+.dark details summary::-webkit-details-marker,
+.dark details summary::marker {
+  color: #ffffff;
 }
 
 /*-------------------------------------*/
@@ -2623,7 +2629,7 @@ a.card-double .content {
 
 .dark .lightbox .middle .caption {
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.9);
-  background: #121212;
+  background: #616161;
 }
 
 .lightbox .middle .caption.open {
