--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -77,6 +77,14 @@ $transition-fast: 0.1s;
 $transition-default: 0.2s;
 $transition-slow: 0.3s;
 
+/*---------------------------------------
+  Border Radius
+---------------------------------------*/
+$radius-1: 0.25rem;
+$radius-2: 0.5rem;
+$radius-3: 1rem;
+$radius-round: 50%; /* Element must be square for it to work */
+
 /*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
     Default HTML
 -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-*/
@@ -523,7 +531,7 @@ header.hero > h1 {
   left: calc(50vw - 2.5rem);
   border: 2rem solid $color-base-3;
   border-top: 1rem solid $color-base-3;
-  border-radius: 50%;
+  border-radius: $radius-round;
   width: 5rem;
   height: 5rem;
   animation: spin 2s linear infinite;
@@ -758,7 +766,7 @@ img {
 }
 
 img.round {
-  border-radius: 50%;
+  border-radius: $radius-round;
 }
 
 .betta_image > div {
@@ -772,7 +780,7 @@ img.round {
 }
 
 .betta_image > div img.round {
-  border-radius: 50%;
+  border-radius: $radius-round;
 }
 
 .betta_image .name {
@@ -910,8 +918,77 @@ form {
   padding-bottom: $line-height;
 }
 
+/* Form elements
+input,
+label,
+select,
+textarea,
+button,
+fieldset,
+legend,
+datalist,
+output,
+option,
+optgroup {
+
+} */
+
+input,
+select,
+textarea,
+button,
+fieldset,
+legend,
+datalist,
+output,
+optgroup {
+  box-sizing: border-box;
+  min-height: 2rem;
+  padding: 0 0.25rem;
+  border: none;
+  border-bottom: 2px solid $color-base-5;
+  border-top-left-radius: $radius-1;
+  border-top-right-radius: $radius-1;
+  background: none;
+  outline: none;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus,
+fieldset:focus,
+legend:focus,
+datalist:focus,
+output:focus,
+optgroup:focus {
+  border-bottom-color: $color-black;
+  background: $color-base-1;
+}
+
+.dark input:focus,
+.dark select:focus,
+.dark textarea:focus,
+.dark button:focus,
+.dark fieldset:focus,
+.dark legend:focus,
+.dark datalist:focus,
+.dark output:focus,
+.dark optgroup:focus {
+  border-bottom-color: $color-white;
+  background: $color-base-9;
+}
+
 form h3 {
   margin-bottom: $line-height;
+}
+
+form label {
+  color: $color-black;
+}
+
+.dark form label {
+  color: $color-white;
 }
 
 form label,
@@ -1283,7 +1360,7 @@ span.icon > img {
 }
 
 .dark p span.icon > img {
-  border-radius: 50%;
+  border-radius: $radius-round;
   background-color: $color-base-7;
 }
 
@@ -1298,7 +1375,7 @@ span.icon.big > img {
   width: 4rem;
   line-height: 0rem;
   background: $color-base-2;
-  border-radius: 50%;
+  border-radius: $radius-round;
   padding: 1rem;
 }
 
@@ -1655,7 +1732,7 @@ between lines
   width: 100%;
   box-shadow: $shadow-level-1;
   background: $color-base-1;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 .dark .photo > img {
@@ -1664,7 +1741,7 @@ between lines
 }
 
 .gallery-item > .content > .click-plane {
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 .gallery-item > .content > .click-plane.caption {
@@ -1765,7 +1842,7 @@ a.card {
   margin-top: 1rem;
   margin: 1rem;
   border-color: $color-base-3;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
   box-shadow: $shadow-level-1;
   transition: $transition-default;
 }
@@ -1802,7 +1879,7 @@ a.card .betta_image img {
 /* Cover card */
 a.card.cover .betta_image img,
 a.card.cover .betta_image {
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 a.card.cover .content {
@@ -1982,7 +2059,7 @@ a.card-double {
   padding: 0;
   margin-top: 3rem;
   border-color: $color-base-3;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
   box-shadow: $shadow-level-1;
   overflow: hidden;
   transition: $transition-default;
@@ -2190,7 +2267,7 @@ a.card-double:active {
   transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: $shadow-level-1;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 .dark .flip-card > .card {
@@ -2211,7 +2288,7 @@ a.card-double:active {
 .flip-card > .card > .front img {
   width: 100%;
   margin: 0;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 .flip-card > .card > .back {
@@ -2325,7 +2402,7 @@ a.card-double:active {
 .lightbox .middle .img img {
   max-width: 100%;
   max-height: calc(100vh - 2rem);
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
 }
 
 .lightbox .middle .caption {
@@ -2335,7 +2412,7 @@ a.card-double:active {
   left: 1rem;
   width: auto;
   padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
   box-shadow: $shadow-level-2;
   background: $color-white;
 }
@@ -2432,7 +2509,7 @@ p.version {
   width: 100%;
   height: 15rem;
   border: 0;
-  border-radius: 0.25rem;
+  border-radius: $radius-1;
   box-shadow: $shadow-level-1;
 }
 
