--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -829,6 +829,17 @@ img.round {
   z-index: 5;
 }
 
+.betta_image-strip .back {
+  left: calc(50vw - (55rem / 2) - 1rem);
+  margin-top: 8rem;
+  z-index: 5;
+}
+
+.betta_image-strip .back.hide,
+.betta_image-strip .forward.hide {
+  display: none;
+}
+
 .betta_image-strip .forward {
   right: calc(50vw - (55rem / 2) - 1rem);
   margin-top: 8rem;
