--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -131,7 +131,20 @@ main {
   }
 }
 
-* {
+body,
+nav,
+main,
+div,
+span,
+article,
+section,
+header,
+button,
+ul,
+li,
+a,
+p,
+img {
   box-sizing: border-box;
 }
 
@@ -939,6 +952,7 @@ legend,
 datalist,
 output,
 optgroup {
+  box-sizing: border-box;
   min-height: 2rem;
   padding: 0 0.25rem;
   border: none;
