--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1506,7 +1506,7 @@ button.dark:active:enabled {
 
 .icon-button .material-icons-round, /* deprecated */
 .icon-button>.icon {
-  vertical-align: middle;
+  vertical-align: top;
   color: $color-black;
   font-size: 1.8rem;
 }
