--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1894,6 +1894,10 @@ a.card.cover .betta_image {
   border-radius: $radius-1;
 }
 
+a.card.cover .betta_image img {
+  aspect-ratio: 3 / 2;
+}
+
 a.card.cover .content {
   position: absolute;
   top: 1rem;
