Add comment to experimental property used

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1900,6 +1900,7 @@ a.card.cover .betta_image {
 }
 
 a.card.cover .betta_image img {
+  // Experimental property, not yet fully supported
   aspect-ratio: 3 / 2;
 }
 
