Prevent cover images from getting stretched

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -2183,6 +2183,7 @@ a.card.cover .betta_image {
 
 a.card.cover .betta_image img {
   aspect-ratio: 3/2;
+  object-fit: cover;
 }
 
 a.card.cover .content {
