--- a/base/_base.scss
+++ b/base/_base.scss
@@ -711,7 +711,33 @@ form textarea {
 	Footer
 ---------------------------------------*/
 footer {
+  box-sizing: border-box;
   text-align: center;
+
+  & > * {
+    display: inline-block;
+  }
+}
+
+footer.rotated {
+  text-align: left;
+  position: fixed; bottom: 100vh; right: 0rem;
+  width: 100vh;
+  padding: 0 1rem;
+  -webkit-transform: rotate(-90deg);
+  -webkit-transform-origin: right bottom;
+  -moz-transform: rotate(-90deg);
+  -moz-transform-origin: right bottom;
+  -ms-transform: rotate(-90deg);
+  -ms-transform-origin: right bottom;
+  -o-transform: rotate(-90deg);
+  -o-transform-origin: right bottom;
+  transform: rotate(-90deg);
+  transform-origin: right bottom;
+
+  p {
+    margin: 0;
+  }
 }
 
 footer a,
