--- a/base/_base.scss
+++ b/base/_base.scss
@@ -308,11 +308,6 @@ img.round {
 /*---------------------------------------
 	Forms
 ---------------------------------------*/
-form {
-  margin: 0;
-  padding-bottom: $line-height;
-}
-
 /* Form elements
 input,
 label,
@@ -407,15 +402,43 @@ form button[type="button"] .material-icons-round {
   font-size: 1rem;
 }
 
-// Hide file input fields
-form input[type="file"] {
-  display: none;
-}
+form {
+  margin: 0;
+  padding-bottom: $line-height;
+  
+  input,
+  label,
+  select {
+    display: block;
+    margin-bottom: 0.5rem;
+  }
 
-form textarea {
-  min-width: 100%;
-  max-width: 100%;
-  height: 5rem;
+  textarea {
+    min-width: 100%;
+    max-width: 100%;
+    height: 5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  // Hide file input fields
+  input[type="file"] {
+    display: none;
+  }
+
+  input.hours,
+  select.minutes {
+    display: inline-block;
+    margin-right: 0.25rem;
+  }
+
+  input.hours {
+    width: 2.1rem;
+  }
+
+  select.minutes {
+    width: 3.5rem;
+    height: 2.2rem;
+  }
 }
 /*-------------------------------------*/
 
@@ -1091,8 +1114,6 @@ between lines
 .inline-split input,
 .inline-split select,
 .inline-split label {
-  display: block;
-  margin-bottom: 0.5rem;
   width: 100%;
 }
 
