--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -673,11 +673,6 @@ img.round {
 /*---------------------------------------
 	Forms
 ---------------------------------------*/
-form {
-  margin: 0;
-  padding-bottom: 1.6rem;
-}
-
 /* Form elements
 input,
 label,
@@ -770,14 +765,36 @@ form button[type=button] .material-icons-round {
   font-size: 1rem;
 }
 
-form input[type=file] {
-  display: none;
+form {
+  margin: 0;
+  padding-bottom: 1.6rem;
 }
-
+form input,
+form label,
+form select {
+  display: block;
+  margin-bottom: 0.5rem;
+}
 form textarea {
   min-width: 100%;
   max-width: 100%;
   height: 5rem;
+  margin-bottom: 0.5rem;
+}
+form input[type=file] {
+  display: none;
+}
+form input.hours,
+form select.minutes {
+  display: inline-block;
+  margin-right: 0.25rem;
+}
+form input.hours {
+  width: 2.1rem;
+}
+form select.minutes {
+  width: 3.5rem;
+  height: 2.2rem;
 }
 
 /*-------------------------------------*/
@@ -1446,8 +1463,6 @@ between lines
 .inline-split input,
 .inline-split select,
 .inline-split label {
-  display: block;
-  margin-bottom: 0.5rem;
   width: 100%;
 }
 
