Add styles for code snippets

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,5 +1,10 @@
-body, textarea, option, input, select, button {
-  font-family: 'Lato', sans-serif;
+body,
+textarea,
+option,
+input,
+select,
+button {
+  font-family: "Lato", sans-serif;
 }
 
 h1,
@@ -270,4 +275,17 @@ details {
 .dark details summary::-webkit-details-marker, /* Chrome */
 .dark details summary::marker {
   color: $color-white;
+}
+
+code {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+code {
+  padding: 0 0.2rem;
+  background: #f5f5f5;
+  border: solid 1px #cccccc;
+  border-radius: 0.2rem;
+  white-space: nowrap;
 }
