--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -2285,7 +2285,12 @@ p.version {
     transform: rotate(360deg);
   }
 }
-body, textarea, option, input, select, button {
+body,
+textarea,
+option,
+input,
+select,
+button {
   font-family: "Lato", sans-serif;
 }
 
@@ -2556,6 +2561,19 @@ details {
 .dark details summary::-webkit-details-marker,
 .dark details summary::marker {
   color: #ffffff;
+}
+
+code {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+code {
+  padding: 0 0.2rem;
+  background: #f5f5f5;
+  border: solid 1px #cccccc;
+  border-radius: 0.2rem;
+  white-space: nowrap;
 }
 
 .tooltip {
