--- a/betta.scss
+++ b/betta.scss
@@ -17,6 +17,7 @@ A project by Isak Combrinck & Dahman Ramdani.
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/form";
 @import "components/tooltip";
 
 @import "layout/header";
