--- a/components/_tooltip.scss
+++ b/components/_tooltip.scss
@@ -6,7 +6,10 @@
 .tooltip > span.tooltip-text {
   visibility: hidden;
   opacity: 0;
-  position: absolute; top: 2.75rem; left: -3rem; right: -3rem;
+  position: absolute;
+  top: 2.75rem;
+  left: -3rem;
+  right: -3rem;
   height: auto;
   width: auto;
   padding: 0.25rem 0.5rem;
@@ -34,8 +37,10 @@
 
 // Arrow at top of tooltip
 .tooltip > span.tooltip-text::after {
-  content: " ";
-  position: absolute; left: 50%; bottom: 100%;
+  content: ' ';
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
@@ -46,6 +51,17 @@
   border-color: transparent transparent $color-base-1 transparent;
 }
 
+// Display tooltip to right on sidebar
+.sidebar .tooltip > span.tooltip-text {
+  top: 0.5rem;
+  left: 3rem;
+  right: -9rem;
+}
+
+.sidebar .tooltip > span.tooltip-text::after {
+  display: none;
+}
+
 // Use tooltip as menu text in mobile menu
 @media (max-width: 800px) {
   nav .tooltip > span.tooltip-text {
@@ -53,7 +69,7 @@
     opacity: 1;
     top: 0;
     bottom: 0;
-    left: 3rem;
+    left: 4rem;
     right: auto;
     padding: 0.5rem 0.5rem;
     text-align: left;
@@ -61,6 +77,10 @@
     line-height: $line-height;
     background-color: $color-white;
     color: $color-black;
+  }
+
+  .sidebar .tooltip > span.tooltip-text {
+    left: 4rem;
   }
 
   .dark nav .tooltip > span.tooltip-text {
@@ -75,15 +95,4 @@
   nav.toolbar .tooltip > span.tooltip-text {
     visibility: hidden;
   }
-}
-
-// Display tooltip to right on sidebar
-.sidebar .tooltip > span.tooltip-text {
-  top: 0.5rem;
-  left: 3rem;
-  right: -9rem;
-}
-
-.sidebar .tooltip > span.tooltip-text::after {
-  display: none;
 }
