Move google maps component to own file

--- a/betta.scss
+++ b/betta.scss
@@ -6,19 +6,20 @@ A collection of CSS styles.
 A project by Isak Combrinck & Dahman Ramdani.
 ---------------------------------------*/
 
-@import "vendors/normalize.scss";
+@import 'vendors/normalize.scss';
 
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-@import "base/base";
-@import "base/animations";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/base';
+@import 'base/animations';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "components/form";
-@import "components/tooltip";
+@import 'components/form';
+@import 'components/google-maps';
+@import 'components/tooltip';
 
-@import "layout/header";
-@import "layout/loader";
+@import 'layout/header';
+@import 'layout/loader';
