--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -1,25 +1,4 @@
 /*---------------------------------------
-	Thin expandable card
----------------------------------------*/
-.b-card-thin {
-  width: 100%;
-  background: #eeeeee;
-}
-
-.b-card-thin div:first-child {
-  height: $line-height-padded;
-  padding: $padding-text;
-  line-height: $line-height;
-  background: #8d7272;
-}
-
-.b-card-thin div:nth-child(2) {
-  height: $line-height;
-  background: #5e5151;
-}
-/*-------------------------------------*/
-
-/*---------------------------------------
 	Typographical elements
 ---------------------------------------*/
 /*
@@ -56,6 +35,9 @@ neither does it make the text more impor-
 tant.
 */
 em {
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 0.05rem;
 }
 
 /*
