--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -2490,6 +2490,11 @@ output,
 option,
 optgroup
 */
+details form {
+  padding-top: 1.6rem;
+  padding-bottom: 0;
+}
+
 form {
   margin: 0;
   padding-bottom: 1.6rem;
