Fix form styling

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -945,7 +945,7 @@ between lines
 
 .betta_spacer-half {
   display: block;
-  height: $half-line-height;
+  height: $line-height-half;
 }
 
 .click-plane {
