--- a/base/_base.scss
+++ b/base/_base.scss
@@ -783,6 +783,11 @@ button.dark:active:enabled {
 .icon-button {
   padding: 0.5rem;
   border-radius: 2rem;
+
+  @media (min-width: 800px) {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
 }
 
 .icon-button.filled .material-icons-round /* deprecated */ {
