--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -1144,6 +1144,12 @@ button.dark:active:enabled {
   padding: 0.5rem;
   border-radius: 2rem;
 }
+@media (min-width: 800px) {
+  .icon-button {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
 
 .icon-button.filled .material-icons-round {
   color: #000000;
